Fix alignment of a button and timer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -260,9 +260,9 @@ button {
 	// }
 }
 
-.get-new-word-btn {
-	margin-bottom: 1.5rem;
-}
+// .get-new-word-btn {
+// 	margin-bottom: 1.5rem;
+// }
 
 .start-game-wrapper {
 	display: flex;
